--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+    <form action="submit" id="area-form">
+      <input id="input-area" type="text" name="area" />
+      <input id="submit-data" type="submit" name="submit" value="submit" />
+    </form>
     <div id="chart"></div>
     <script src="index.js"></script>
   </body>
